refactor: use mst

--- a/src/resources/css/ui.css
+++ b/src/resources/css/ui.css
@@ -6,4 +6,16 @@
   transition: all 0.27s cubic-bezier(0.3, 0.1, 0.58, 1) 0s;
 }
 
+button {
+  @apply outline-none;
+}
+
+button:focus {
+  @apply outline-none;
+}
+
+button {
+  transition: all 0.27s cubic-bezier(0.3, 0.1, 0.58, 1) 0s;
+}
+
 @tailwind utilities;
